--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,12 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Corgi Corner</title>
-    <meta name='author' content='{{author}}' />
-    <meta property='og:url' content='{{url}}' />
-    <meta property='og:image' content={{thumbnail}} />
-    <meta property='og:video:url' content={{srcUrl}} />
+    <meta name='author' content='{{META_author}}' />
+    <meta property='og:url' content='{{META_url}}' />
+    <meta property='og:image' content={{META_thumbnail}} />
+    <meta property='og:video:url' content={{META_srcUrl}} />
     <meta property='og:video:type' content='text/html' />
     <meta property='og:type' content='video.other' />
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
