--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,9 +27,10 @@
     <title>Corgi Corner</title>
     <meta name='author' content='{{META_author}}' />
     <meta property='og:url' content='{{META_url}}' />
-    <meta property='og:image' content={{META_thumbnail}} />
+    <!-- <meta property='og:image' content={{META_thumbnail}} /> -->
+    <meta property='og:video' content='{{META_url}}' />
     <meta property='og:video:url' content={{META_srcUrl}} />
-    <meta property='og:video:type' content='text/html' />
+    <meta property='og:video:type' content='video/mp4' />
     <meta property='og:type' content='video.other' />
 
   </head>
