--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,10 @@
     <!-- <meta property='og:image' content={{META_thumbnail}} /> -->
     <meta property='og:video' content='{{META_url}}' />
     <meta property='og:video:url' content={{META_srcUrl}} />
+    <meta property='og:video:secure_url' content={{META_srcUrl}} />
     <meta property='og:video:type' content='video/mp4' />
+    <meta property="og:video:width" content="1280">
+    <meta property="og:video:height" content="720">
 
     <title>Corgi Corner</title>
     <meta name="description" content="{{META_description}}" />
