--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffafff" />
-    <!-- <meta
+    <meta
       name="description"
-      content="Navy's homepage 😎"
-    /> -->
+      content="Navy's homepage. Contains some text about me and occasional video clips."
+    />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -35,7 +35,7 @@
     <meta property="og:video:height" content="720">
 
     <title>Corgi Corner</title>
-    <meta name="description" content="{{META_description}}" />
+    <!-- <meta name="description" content="{{META_description}}" /> -->
     <meta name='author' content='{{META_author}}' />
 
   </head>
